parser.output
Terminals unused in grammar

   DEFAULT
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   FOR_LOP
   SWITCH_SHOW
   SWITCH_CASE
   SWITCH_CASE_LIST
   ARRAY_USE
   ARRAY_DEFINE


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: VarDec LSB INT RSB
   11       | ID

   12 FuncDec: ID LP VarList RP
   13        | ID LP RP

   14 VarList: ParamDec
   15        | ParamDec COMMA VarList

   16 ParamDec: Specifier VarDec

   17 CompSt: LC DefList StmList RC

   18 StmList: /* empty */
   19        | Stmt StmList

   20 Stmt: Exp SEMI
   21     | CompSt
   22     | RETURN Exp SEMI
   23     | IF LP Exp RP Stmt
   24     | IF LP Exp RP Stmt ELSE Stmt
   25     | WHILE LP Exp RP Stmt
   26     | FOR LP Exp SEMI Exp SEMI Exp RP Stmt
   27     | SWITCH LP Exp RP LC SwitchCaseList RC

   28 SwitchCaseList: SwitchCase
   29               | SwitchCaseList SwitchCase

   30 SwitchCase: CASE Exp COLON StmList BREAK SEMI

   31 DefList: /* empty */
   32        | Def DefList
   33        | error SEMI

   34 Def: Specifier DecList SEMI

   35 DecList: Dec
   36        | Dec COMMA DecList

   37 Dec: VarDec
   38    | VarDec ASSIGNOP Exp

   39 Exp: Exp ASSIGNOP Exp
   40    | Exp AND Exp
   41    | Exp OR Exp
   42    | Exp RELOP Exp
   43    | Exp PLUS Exp
   44    | Exp MINUS Exp
   45    | Exp STAR Exp
   46    | Exp DIV Exp
   47    | LP Exp RP
   48    | MINUS Exp
   49    | NOT Exp
   50    | DPLUS Exp
   51    | Exp DPLUS
   52    | ID LP Args RP
   53    | ID LP RP
   54    | ID
   55    | INT
   56    | FLOAT
   57    | CHAR
   58    | Exp LSB Exp RSB

   59 Args: Exp COMMA Args
   60     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 33
INT (258) 10 55
ID (259) 11 12 13 52 53 54
RELOP (260) 42
TYPE (261) 7
FLOAT (262) 56
CHAR (263) 57
DPLUS (264) 50 51
LP (265) 12 13 23 24 25 26 27 47 52 53
RP (266) 12 13 23 24 25 26 27 47 52 53
LC (267) 17 27
RC (268) 17 27
SEMI (269) 4 6 20 22 26 30 33 34
COMMA (270) 9 15 36 59
PLUS (271) 43
MINUS (272) 44 48
STAR (273) 45
DIV (274) 46
ASSIGNOP (275) 38 39
AND (276) 40
OR (277) 41
NOT (278) 49
IF (279) 23 24
ELSE (280) 24
WHILE (281) 25
RETURN (282) 22
FOR (283) 26
SWITCH (284) 27
CASE (285) 30
COLON (286) 30
DEFAULT (287)
BREAK (288) 30
LSB (289) 10 58
RSB (290) 10 58
EXT_DEF_LIST (291)
EXT_VAR_DEF (292)
FUNC_DEF (293)
FUNC_DEC (294)
EXT_DEC_LIST (295)
PARAM_LIST (296)
PARAM_DEC (297)
VAR_DEF (298)
DEC_LIST (299)
DEF_LIST (300)
COMP_STM (301)
STM_LIST (302)
EXP_STMT (303)
IF_THEN (304)
IF_THEN_ELSE (305)
FUNC_CALL (306)
ARGS (307)
FUNCTION (308)
PARAM (309)
ARG (310)
CALL (311)
LABEL (312)
GOTO (313)
JLT (314)
JLE (315)
JGT (316)
JGE (317)
EQ (318)
NEQ (319)
FOR_LOP (320)
SWITCH_SHOW (321)
SWITCH_CASE (322)
SWITCH_CASE_LIST (323)
ARRAY_USE (324)
ARRAY_DEFINE (325)
UMINUS (326)
LOWER_THEN_ELSE (327)


Nonterminals, with rules where they appear

$accept (73)
    on left: 0
program (74)
    on left: 1, on right: 0
ExtDefList (75)
    on left: 2 3, on right: 1 3
ExtDef (76)
    on left: 4 5 6, on right: 3
Specifier (77)
    on left: 7, on right: 4 5 16 34
ExtDecList (78)
    on left: 8 9, on right: 4 9
VarDec (79)
    on left: 10 11, on right: 8 9 10 16 37 38
FuncDec (80)
    on left: 12 13, on right: 5
VarList (81)
    on left: 14 15, on right: 12 15
ParamDec (82)
    on left: 16, on right: 14 15
CompSt (83)
    on left: 17, on right: 5 21
StmList (84)
    on left: 18 19, on right: 17 19 30
Stmt (85)
    on left: 20 21 22 23 24 25 26 27, on right: 19 23 24 25 26
SwitchCaseList (86)
    on left: 28 29, on right: 27 29
SwitchCase (87)
    on left: 30, on right: 28 29
DefList (88)
    on left: 31 32 33, on right: 17 32
Def (89)
    on left: 34, on right: 32
DecList (90)
    on left: 35 36, on right: 34 36
Dec (91)
    on left: 37 38, on right: 35 36
Exp (92)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58, on right: 20 22 23 24 25 26 27 30 38 39 40 41 42 43 44 45
    46 47 48 49 50 51 58 59 60
Args (93)
    on left: 59 60, on right: 52 59


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     go to state 3
    ExtDefList  go to state 4
    ExtDef      go to state 5
    Specifier   go to state 6


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  go to state 9
    ExtDef      go to state 5
    Specifier   go to state 6


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 10

    ExtDecList  go to state 11
    VarDec      go to state 12
    FuncDec     go to state 13


state 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 8

    0 $accept: program $end .

    $default  accept


state 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 10

   11 VarDec: ID .
   12 FuncDec: ID . LP VarList RP
   13        | ID . LP RP

    LP  shift, and go to state 14

    $default  reduce using rule 11 (VarDec)


state 11

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 15


state 12

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   10 VarDec: VarDec . LSB INT RSB

    COMMA  shift, and go to state 16
    LSB    shift, and go to state 17

    $default  reduce using rule 8 (ExtDecList)


state 13

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 18

    CompSt  go to state 19


state 14

   12 FuncDec: ID LP . VarList RP
   13        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 20

    Specifier  go to state 21
    VarList    go to state 22
    ParamDec   go to state 23


state 15

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 16

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 24

    ExtDecList  go to state 25
    VarDec      go to state 12


state 17

   10 VarDec: VarDec LSB . INT RSB

    INT  shift, and go to state 26


state 18

   17 CompSt: LC . DefList StmList RC

    error  shift, and go to state 27
    TYPE   shift, and go to state 2

    INT     reduce using rule 31 (DefList)
    ID      reduce using rule 31 (DefList)
    FLOAT   reduce using rule 31 (DefList)
    CHAR    reduce using rule 31 (DefList)
    DPLUS   reduce using rule 31 (DefList)
    LP      reduce using rule 31 (DefList)
    LC      reduce using rule 31 (DefList)
    RC      reduce using rule 31 (DefList)
    MINUS   reduce using rule 31 (DefList)
    NOT     reduce using rule 31 (DefList)
    IF      reduce using rule 31 (DefList)
    WHILE   reduce using rule 31 (DefList)
    RETURN  reduce using rule 31 (DefList)
    FOR     reduce using rule 31 (DefList)
    SWITCH  reduce using rule 31 (DefList)

    Specifier  go to state 28
    DefList    go to state 29
    Def        go to state 30


state 19

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 20

   13 FuncDec: ID LP RP .

    $default  reduce using rule 13 (FuncDec)


state 21

   16 ParamDec: Specifier . VarDec

    ID  shift, and go to state 24

    VarDec  go to state 31


state 22

   12 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 32


state 23

   14 VarList: ParamDec .
   15        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 33

    $default  reduce using rule 14 (VarList)


state 24

   11 VarDec: ID .

    $default  reduce using rule 11 (VarDec)


state 25

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 26

   10 VarDec: VarDec LSB INT . RSB

    RSB  shift, and go to state 34


state 27

   33 DefList: error . SEMI

    SEMI  shift, and go to state 35


state 28

   34 Def: Specifier . DecList SEMI

    ID  shift, and go to state 24

    VarDec   go to state 36
    DecList  go to state 37
    Dec      go to state 38


state 29

   17 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 39
    ID      shift, and go to state 40
    FLOAT   shift, and go to state 41
    CHAR    shift, and go to state 42
    DPLUS   shift, and go to state 43
    LP      shift, and go to state 44
    LC      shift, and go to state 18
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    RETURN  shift, and go to state 49
    FOR     shift, and go to state 50
    SWITCH  shift, and go to state 51

    $default  reduce using rule 18 (StmList)

    CompSt   go to state 52
    StmList  go to state 53
    Stmt     go to state 54
    Exp      go to state 55


state 30

   32 DefList: Def . DefList

    error  shift, and go to state 27
    TYPE   shift, and go to state 2

    INT     reduce using rule 31 (DefList)
    ID      reduce using rule 31 (DefList)
    FLOAT   reduce using rule 31 (DefList)
    CHAR    reduce using rule 31 (DefList)
    DPLUS   reduce using rule 31 (DefList)
    LP      reduce using rule 31 (DefList)
    LC      reduce using rule 31 (DefList)
    RC      reduce using rule 31 (DefList)
    MINUS   reduce using rule 31 (DefList)
    NOT     reduce using rule 31 (DefList)
    IF      reduce using rule 31 (DefList)
    WHILE   reduce using rule 31 (DefList)
    RETURN  reduce using rule 31 (DefList)
    FOR     reduce using rule 31 (DefList)
    SWITCH  reduce using rule 31 (DefList)

    Specifier  go to state 28
    DefList    go to state 56
    Def        go to state 30


state 31

   10 VarDec: VarDec . LSB INT RSB
   16 ParamDec: Specifier VarDec .

    LSB  shift, and go to state 17

    $default  reduce using rule 16 (ParamDec)


state 32

   12 FuncDec: ID LP VarList RP .

    $default  reduce using rule 12 (FuncDec)


state 33

   15 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  go to state 21
    VarList    go to state 57
    ParamDec   go to state 23


state 34

   10 VarDec: VarDec LSB INT RSB .

    $default  reduce using rule 10 (VarDec)


state 35

   33 DefList: error SEMI .

    $default  reduce using rule 33 (DefList)


state 36

   10 VarDec: VarDec . LSB INT RSB
   37 Dec: VarDec .
   38    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 58
    LSB       shift, and go to state 17

    $default  reduce using rule 37 (Dec)


state 37

   34 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 59


state 38

   35 DecList: Dec .
   36        | Dec . COMMA DecList

    COMMA  shift, and go to state 60

    $default  reduce using rule 35 (DecList)


state 39

   55 Exp: INT .

    $default  reduce using rule 55 (Exp)


state 40

   52 Exp: ID . LP Args RP
   53    | ID . LP RP
   54    | ID .

    LP  shift, and go to state 61

    $default  reduce using rule 54 (Exp)


state 41

   56 Exp: FLOAT .

    $default  reduce using rule 56 (Exp)


state 42

   57 Exp: CHAR .

    $default  reduce using rule 57 (Exp)


state 43

   50 Exp: DPLUS . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 62


state 44

   47 Exp: LP . Exp RP

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 63


state 45

   48 Exp: MINUS . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 64


state 46

   49 Exp: NOT . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 65


state 47

   23 Stmt: IF . LP Exp RP Stmt
   24     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 66


state 48

   25 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 67


state 49

   22 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 68


state 50

   26 Stmt: FOR . LP Exp SEMI Exp SEMI Exp RP Stmt

    LP  shift, and go to state 69


state 51

   27 Stmt: SWITCH . LP Exp RP LC SwitchCaseList RC

    LP  shift, and go to state 70


state 52

   21 Stmt: CompSt .

    $default  reduce using rule 21 (Stmt)


state 53

   17 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 71


state 54

   19 StmList: Stmt . StmList

    INT     shift, and go to state 39
    ID      shift, and go to state 40
    FLOAT   shift, and go to state 41
    CHAR    shift, and go to state 42
    DPLUS   shift, and go to state 43
    LP      shift, and go to state 44
    LC      shift, and go to state 18
    MINUS   shift, and go to state 45
    NOT     shift, and go to state 46
    IF      shift, and go to state 47
    WHILE   shift, and go to state 48
    RETURN  shift, and go to state 49
    FOR     shift, and go to state 50
    SWITCH  shift, and go to state 51

    $default  reduce using rule 18 (StmList)

    CompSt   go to state 52
    StmList  go to state 72
    Stmt     go to state 54
    Exp      go to state 55


state 55

   20 Stmt: Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   51    | Exp . DPLUS
   58    | Exp . LSB Exp RSB

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    SEMI      shift, and go to state 75
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LSB       shift, and go to state 83


state 56

   32 DefList: Def DefList .

    $default  reduce using rule 32 (DefList)


state 57

   15 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 15 (VarList)


state 58

   38 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 84


state 59

   34 Def: Specifier DecList SEMI .

    $default  reduce using rule 34 (Def)


state 60

   36 DecList: Dec COMMA . DecList

    ID  shift, and go to state 24

    VarDec   go to state 36
    DecList  go to state 85
    Dec      go to state 38


state 61

   52 Exp: ID LP . Args RP
   53    | ID LP . RP

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    RP     shift, and go to state 86
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp   go to state 87
    Args  go to state 88


state 62

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   50    | DPLUS Exp .
   51    | Exp . DPLUS
   58    | Exp . LSB Exp RSB

    DPLUS  shift, and go to state 74

    $default  reduce using rule 50 (Exp)


state 63

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   47    | LP Exp . RP
   51    | Exp . DPLUS
   58    | Exp . LSB Exp RSB

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    RP        shift, and go to state 89
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LSB       shift, and go to state 83


state 64

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   48    | MINUS Exp .
   51    | Exp . DPLUS
   58    | Exp . LSB Exp RSB

    DPLUS  shift, and go to state 74

    $default  reduce using rule 48 (Exp)


state 65

   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   49    | NOT Exp .
   51    | Exp . DPLUS
   58    | Exp . LSB Exp RSB

    DPLUS  shift, and go to state 74

    $default  reduce using rule 49 (Exp)


state 66

   23 Stmt: IF LP . Exp RP Stmt
   24     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 90


state 67

   25 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 91


state 68

   22 Stmt: RETURN Exp . SEMI
   39 Exp: Exp . ASSIGNOP Exp
   40    | Exp . AND Exp
   41    | Exp . OR Exp
   42    | Exp . RELOP Exp
   43    | Exp . PLUS Exp
   44    | Exp . MINUS Exp
   45    | Exp . STAR Exp
   46    | Exp . DIV Exp
   51    | Exp . DPLUS
   58    | Exp . LSB Exp RSB

    RELOP     shift, and go to state 73
    DPLUS     shift, and go to state 74
    SEMI      shift, and go to state 92
    PLUS      shift, and go to state 76
    MINUS     shift, and go to state 77
    STAR      shift, and go to state 78
    DIV       shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    LSB       shift, and go to state 83


state 69

   26 Stmt: FOR LP . Exp SEMI Exp SEMI Exp RP Stmt

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 93


state 70

   27 Stmt: SWITCH LP . Exp RP LC SwitchCaseList RC

    INT    shift, and go to state 39
    ID     shift, and go to state 40
    FLOAT  shift, and go to state 41
    CHAR   shift, and go to state 42
    DPLUS  shift, and go to state 43
    LP     shift, and go to state 44
    MINUS  shift, and go to state 45
    NOT    shift, and go to state 46

    Exp  go to state 94


state 71
